--- a/style.css
+++ b/style.css
@@ -1,4 +1,54 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto";
+}
+
+/* SECTION ONE */
+/* HEADER & HERO */
+
+.section-one {
+    background-color: #faa300;  
+    padding-left: 200px;
+    padding-right: 200px;
+    border: 5px red solid;
+}
+
+.header {
+    display: flex;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 5px red solid;
+}
+
+.title {
+    font-size: 24px;
+    font-weight: bolder;
+    color: #591f0a;
+}
+
+ul {
+    display: flex;
+    margin-left: auto;
+    list-style-type: none;
+    font-size: 18px;
+    gap: 45px;
+    color: #591f0a;
+}
+
+a:link {
+    text-decoration: none;
+    color: #591f0a;
+}
+
+a:visited {
+    color:#591f0a;
+}
+
+a:hover {
+    color:#854d27;
+}
+
+a:active {
+    color: #591f0a;
 }
