--- a/style.css
+++ b/style.css
@@ -34,20 +34,20 @@ ul {
     color: #591f0a;
 }
 
-a:link {
+.header-right a:link {
     text-decoration: none;
     color: #591f0a;
 }
 
-a:visited {
+.header-right a:visited {
     color:#591f0a;
 }
 
-a:hover {
+.header-right a:hover {
     color:#854d27;
 }
 
-a:active {
+.header-right a:active {
     color: #591f0a;
 }
 
@@ -76,22 +76,44 @@ a:active {
     max-width: 675px;
 }
 
-.sign-up-container {
-    margin-top: auto;
-    height: auto;
-    width: 57px;
-    padding: 10px 35px 10px 35px;
-    background-color: #bf3100;
-    color: #591f0a;
-    font-weight: 900;
-    border-radius: 7%;
-    border: 2px solid black;
-}
-
 .hero-right img {
     height: 450px;
     width: auto;
     max-width: 100%;
     border-radius: 1%
 }
+
+
+.sign-up-container {
+    margin-top: auto;
+    height: auto;
+    width: 57px;
+    padding: 10px 35px 10px 35px;
+    background-color: #fe4e00;
+    color: white;
+    font-weight: 900;
+    border-radius: 7%;
+    border: 2px solid black;
+}
+
+.sign-up-container .sign-up a:link {
+    color: white;
+    text-decoration: none;
+}
+
+.sign-up-container .sign-up a:visited {
+    color:white;
+}
+
+.sign-up-container .sign-up a:hover {
+    color:#591f0a;
+}
+
+.sign-up-container .sign-up a:active {
+    color:white;
+}
+
+/* SECTION TWO */
+
+
 
