--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 
 .header {
     display: flex;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .title {
@@ -115,5 +115,32 @@ ul {
 
 /* SECTION TWO */
 
+.section-two {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 200px 200px 200px;
+    align-items: center;
+}
+
+.section-two h1 {
+    margin-bottom: 75px;
+    margin-top: 25px;
+    font-size: 36px;
+    font-weight: 900;
+    color:#591f0a;
+}
+
+.illustration-one img {
+    height: 250px;
+    width: 250px;
+    border-radius: 2%;
+}
+
+.illustration-one li {
+    text-align: center;
+    max-width: 250px;
+    font-size: 20px;
+    color: #854d27;
+}
 
 
