--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* HEADER & HERO */
 
 .section-one {
-    background-color: #faa300;  
+    background-image: linear-gradient(#faa300, #ca6702);
     padding-left: 200px;
     padding-right: 200px;
 }
@@ -89,24 +89,24 @@ ul {
     height: auto;
     width: 57px;
     padding: 10px 35px 10px 35px;
-    background-color: #fe4e00;
-    color: #591f0a;
-    font-weight: 900;
-    border-radius: 7%;
-    border: 2px solid black ;
+    background-color: #591f0a;
+    color: white;
+    font-weight: 600;
+    border-radius: 9%;
+    border: 2px solid;
 }
 
 .sign-up-container .sign-up a:link {
-    color: #591f0a;
+    color: white;
     text-decoration: none;
 }
 
 .sign-up-container .sign-up a:visited {
-    color:#591f0a;
+    color:white;
 }
 
 .sign-up-container .sign-up a:hover {
-    color:white;
+    color: #854d27;
 }
 
 .sign-up-container .sign-up a:active {
@@ -131,6 +131,7 @@ ul {
 }
 
 .illustration-one img {
+    margin-bottom: 15px;
     height: 250px;
     width: 250px;
     border-radius: 2%;
@@ -142,5 +143,50 @@ ul {
     font-size: 20px;
     color: #854d27;
 }
+
+/* SECTION THREE */
+
+.section-three {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(#faa300, #ca6702);
+    padding: 75px;
+    color: white;
+}
+
+.headline {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.arabic-hadith {
+    font-family: "Amiri";
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    margin-top: 175px;
+    font-weight: 900;
+}
+
+.english-translation {
+    display: flex;
+    justify-content: center;
+    font-size: 26px;
+    margin-top:175px;
+    font-weight: 900;
+}
+
+.attribution {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 900;
+}
+
+
 
 
