--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ ul {
     background-color: #591f0a;
     color: white;
     font-weight: 600;
-    border-radius: 9%;
+    border-radius: 8px;
     border: 2px solid;
 }
 
@@ -166,7 +166,7 @@ ul {
     font-family: "Amiri";
     display: flex;
     justify-content: center;
-    font-size: 36px;
+    font-size: 42px;
     margin-top: 175px;
     font-weight: 900;
 }
@@ -184,8 +184,41 @@ ul {
     justify-content: center;
     font-size: 20px;
     font-style: italic;
+    font-weight: 550;
+}
+
+/* SECTION FOUR */
+
+.section-four {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
+}
+
+.call-to-action {
+    padding: 50px;
+    width: 1100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #591f0a;
+    color:white;
+    border-radius: 12px;
+}
+
+
+.cta {
+   font-size: 36px;;
     font-weight: 900;
 }
+
+.cta-description {
+    font-size: 24px;
+}
+
+
+
 
 
 
