--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
     font-family: "Roboto";
 }
 
+
 /* SECTION ONE */
 /* HEADER & HERO */
 
 .section-one {
-    background-image: linear-gradient(#faa300, #ca6702);
+    background-image: linear-gradient(#f97316, #ea580c);
     padding-left: 200px;
     padding-right: 200px;
 }
@@ -22,7 +23,7 @@
 .title {
     font-size: 24px;
     font-weight: bolder;
-    color: #591f0a;
+    color: #1e1e1e;
 }
 
 ul {
@@ -31,24 +32,24 @@ ul {
     list-style-type: none;
     font-size: 18px;
     gap: 45px;
-    color: #591f0a;
+    color: #1e1e1e;
 }
 
 .header-right a:link {
     text-decoration: none;
-    color: #591f0a;
+    color: #1e1e1e;
 }
 
 .header-right a:visited {
-    color:#591f0a;
+    color:#1e1e1e;
 }
 
 .header-right a:hover {
-    color:#854d27;
+    color:#334155;
 }
 
 .header-right a:active {
-    color: #591f0a;
+    color: #1e1e1e;
 }
 
 .hero {
@@ -65,14 +66,14 @@ ul {
 
 .hero-left h1 {
     font-size: 48px;
-    color: #591f0a;
+    color: #1e1e1e;
     font-weight: 900;
     max-width: 500px;
 }
 
 .hero-left p {
     font-size: 18px;
-    color:#854d27;
+    color:#4b4b4b;
     max-width: 675px;
 }
 
@@ -83,13 +84,12 @@ ul {
     border-radius: 1%
 }
 
-
 .sign-up-container {
     margin-top: auto;
     height: auto;
     width: 57px;
     padding: 10px 35px 10px 35px;
-    background-color: #591f0a;
+    background-color: #1e293b;
     color: white;
     font-weight: 600;
     border-radius: 8px;
@@ -106,11 +106,11 @@ ul {
 }
 
 .sign-up-container .sign-up a:hover {
-    color: #854d27;
+    color: #334155;
 }
 
 .sign-up-container .sign-up a:active {
-    color:#591f0a;
+    color:#1e1e1e;
 }
 
 /* SECTION TWO */
@@ -127,7 +127,7 @@ ul {
     margin-top: 25px;
     font-size: 36px;
     font-weight: 900;
-    color:#591f0a;
+    color:#1e1e1e;
 }
 
 .illustration-one img {
@@ -141,18 +141,18 @@ ul {
     text-align: center;
     max-width: 250px;
     font-size: 20px;
-    color: #854d27;
+    color: #4b4b4b;
 }
 
 /* SECTION THREE */
 
 .section-three {
-    height: 500px;
+    height: 300px;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(#faa300, #ca6702);
+    background-image: linear-gradient(#f97316, #ea580c);
     padding: 75px;
-    color: white;
+    color:#1e1e1e;
 }
 
 .headline {
@@ -160,6 +160,7 @@ ul {
     justify-content: center;
     font-size: 36px;
     font-weight: 900;
+    margin-bottom: 85px;
 }
 
 .arabic-hadith {
@@ -167,24 +168,22 @@ ul {
     display: flex;
     justify-content: center;
     font-size: 42px;
-    margin-top: 175px;
     font-weight: 900;
+    margin-bottom: 55px;
 }
 
 .english-translation {
     display: flex;
     justify-content: center;
     font-size: 26px;
-    margin-top:175px;
     font-weight: 900;
 }
 
 .attribution {
     display: flex;
     justify-content: center;
-    font-size: 20px;
-    font-style: italic;
-    font-weight: 550;
+    font-size: 22px;
+    font-weight: 900;
 }
 
 /* SECTION FOUR */
@@ -194,6 +193,7 @@ ul {
     justify-content: center;
     align-items: center;
     height: 350px;
+    padding: 100px;
 }
 
 .call-to-action {
@@ -202,14 +202,13 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: #591f0a;
-    color:white;
+    background-color: #f97316;
+    color: #1e1e1e;
     border-radius: 12px;
 }
 
-
 .cta {
-   font-size: 36px;;
+   font-size: 32px;;
     font-weight: 900;
 }
 
@@ -217,9 +216,14 @@ ul {
     font-size: 24px;
 }
 
+/* FOOTER */
 
-
-
-
-
-
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    background-color: #1e293b;
+    font-size: 18px;
+    color: #ffffff;
+}
