--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ ul {
     display: flex;
     flex-direction: column;
     background-image: linear-gradient(#f97316, #ea580c);
-    padding: 75px;
+    padding: 40px 75px 75px 75px;
     color:#1e1e1e;
 }
 
@@ -160,7 +160,7 @@ ul {
     justify-content: center;
     font-size: 36px;
     font-weight: 900;
-    margin-bottom: 85px;
+    margin-bottom: 90px;
 }
 
 .arabic-hadith {
@@ -169,7 +169,7 @@ ul {
     justify-content: center;
     font-size: 42px;
     font-weight: 900;
-    margin-bottom: 55px;
+    margin-bottom: 58px;
 }
 
 .english-translation {
